--- a/Pages/Requirements/Index.cshtml
+++ b/Pages/Requirements/Index.cshtml
@@ -50,7 +50,7 @@
                         <div class="col border-bottom-1 border-ccc bg-title p-1 ps-2 fs-7">
                             需求&nbsp;(@Model.Issue.Count)
                             @*<a href="#offcanvasExample" class="text-decoration-none text-269 float-end mr-2" data-bs-toggle="offcanvas" role="button" aria-controls="offcanvasExample"><i class="bi bi-lightning"></i>&nbsp;新建问题</a>*@
-                            <a asp-page="/Issues/New" class="text-decoration-none float-end mr-2" target="_blank"><img src="~/images/add.png" />&nbsp;登记</a>
+                            <a asp-page="/Issues/New" class="text-decoration-none float-end mr-2" target="_blank"><img src="~/images/add.png" />&nbsp;登记问题</a>
                         </div>
                     </div>
                 </div>
