--- a/Pages/Products/Index.cshtml
+++ b/Pages/Products/Index.cshtml
@@ -7,38 +7,42 @@
     input::before, input::after {
         padding-top: 0px !important;
     }
+
     .link-btn {
         flex-shrink: 0;
     }
-    .link-btn::before {
-        zoom:0.8;
-        content: "";
-        padding-left: 18px;
-        background-image: url('/images/svg/chevron-down.svg') !important;
-        background-repeat: no-repeat;
-    }
-    .link-btn:not(.collapsed)::before {
-        zoom:0.8;
-        content: "";
-        padding-left: 18px;
-        background-image: url('/images/svg/chevron-right.svg') !important;
-        background-repeat: no-repeat;
-        /*transform: rotate(-180deg) !important;*/
-        /*transition: ease-in;*/
-    }
+
+        .link-btn::before {
+            zoom: 0.8;
+            content: "";
+            padding-left: 18px;
+            background-image: url('/images/svg/chevron-down.svg') !important;
+            background-repeat: no-repeat;
+        }
+
+        .link-btn:not(.collapsed)::before {
+            zoom: 0.8;
+            content: "";
+            padding-left: 18px;
+            background-image: url('/images/svg/chevron-right.svg') !important;
+            background-repeat: no-repeat;
+            /*transform: rotate(-180deg) !important;*/
+            /*transition: ease-in;*/
+        }
 </style>
+<link rel="stylesheet" href="~/css/hightlight.css" />
 <body>
     <div class="container-fluid fs-7">
         <div class="row ps-0">
             <div class="col border-1 border-ccc mr-2">
                 <div class="row">
-                    <div class="col bg-title p-1 ps-2 fs-7">
-                        医院列表
+                    <div class="col fw-bold bg-title p-1 ps-2 fs-7">
+                        项目
                     </div>
                 </div>
                 <div class="row border-top border-ccc p-1 ps-1">
                     <div class="accordion m-0 p-0" id="accordion-main">
-                        <table class="table table-hover border border-ccc w-100">
+                        <table id="mainTable" class="table table-hover table-bordered lh-1 fs-7">
                             <thead>
                                 <tr>
                                     <th width="80px">#</th>
@@ -65,14 +69,14 @@
                                         </tr>
                                         @foreach (User user in Model.Project.Where(t => user_id.Contains(t.Id))) {
                                             <tr id="content-@item.Id" class="class-@item.Name text-666">
-                                                <td class="p-1">@user.Id</td>
-                                                <td class="p-1"><a id="project_@user.Id" name="project_@user.Id" href="#Temp">@user.Firstname</a>&nbsp;&nbsp;<span class="m-0 p-0 fw-normal badge bg-light fs-7 text-dark">New</span></td>
-                                                <td class="p-1"><i class="bi bi-record"></i></td>
-                                                <td class="p-1"><i class="bi bi-record"></i></td>
-                                                <td class="p-1"><i class="bi bi-record2"></i></td>
-                                                <td class="p-1"><i class="bi bi-record-fill"></i></td>
-                                                <td class="p-1">@user.pinyin</td>
-                                                <td class="p-1 text-right"><a href="#Temp">查看本院需求</a></td>
+                                                <td>@user.Id</td>
+                                                <td><a id="project_@user.Id" name="project_@user.Id" href="#Temp">@user.Firstname</a>&nbsp;&nbsp;<span class="m-0 p-0 fw-normal badge bg-light fs-7 text-dark">New</span></td>
+                                                <td><i class="bi bi-record"></i></td>
+                                                <td><i class="bi bi-record"></i></td>
+                                                <td><i class="bi bi-record2"></i></td>
+                                                <td><i class="bi bi-record-fill"></i></td>
+                                                <td>@user.pinyin</td>
+                                                <td class="text-right"><a href="#Temp">查看本院需求</a></td>
                                             </tr>
                                         }
                                     }
@@ -82,13 +86,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 p-0 border border-ccc">
-                <div class="row bg-title p-0 m-0 border-bottom border-ccc">
+            <div class="col-3 p-0">
+                <div class="row bg-title p-0 m-0 border border-ccc">
                     <div class="col ps-0 m-1">
-                        拼音检索：
+                        检索
                     </div>
                 </div>
-                <div class="row">
+                <div class="row p-0 m-0 border border-ccc border-top-0">
                     <div class="col m-3 p-3 pt-0">
                         <label for="exampleDataList" class="form-label">医院名称</label>
                         <input class="form-control fs-7" list="custom_project_options" id="custom_project" placeholder="Type to search..." autocomplete="off">
